--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
 			<div id="action">
 				<div id="options">
 				<h2 class="weapon">Pick your weapon!<h2>
-				  <input class="options" title="Choose rock!" type="image" src="img/rock.png" value="Rock" />
-				  <input class="options" title="Choose paper!" type="image" src="img/paper.png" value="Paper" />
-				  <input class="options" title="Choose scissors!" type="image" src="img/scissors.png" value="Scissors" />
+				  <input class="options" title="Choose rock!" type="image" src="img/Rock.png" value="Rock" />
+				  <input class="options" title="Choose paper!" type="image" src="img/Paper.png" value="Paper" />
+				  <input class="options" title="Choose scissors!" type="image" src="img/Scissors.png" value="Scissors" />
 				</div>
 				<a id="restart-action" onclick="restart()" class="hiddenStyle">Restart</a>
 			</div>
