--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 			</h2>
 			<div class="display-moves">
 			  <div class="move">
-				<img id="p-move" class="options" src="img/random.png">
+				<img id="p-move" class="options" src="img/Random.png">
 			  </div>
 			  <div class="vs">VS</div>
 			  <div class="move">
-				<img id="c-move" class="options" src="img/random.png">
+				<img id="c-move" class="options" src="img/Random.png">
 			  </div>
 			</div>
 			
